--- a/TERM-1-SPS-Review.html
+++ b/TERM-1-SPS-Review.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SPS Term 1 Interactive Quiz</title>
+    <title>SPS Term 1 Revision</title>
     <style>
         * {
             margin: 0;
